--- a/myreactapp/src/style.css
+++ b/myreactapp/src/style.css
@@ -24,55 +24,40 @@
   width: 100%;
   border-radius: 8px;
   font-size: 1.5em;
-}
+} 
+
 .box.NewConfirmed {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
-}
-.box.TotalConfirmed {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
+  border: 1px solid #ce9c61;
+  background: #f0ad81;
+}.box.TotalConfirmed {
+  border: 1px solid #ce9c61;
+  background: #f0ad81;
 }
 
 .box.NewDeaths {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
+  border: 1px solid #95c458;
+  background: #c0f081;
 }.box.TotalDeaths {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
+  border: 1px solid #95c458;
+  background: #c0f081;
 }
 
 .box.NewRecovered {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
+  border: 1px solid #ce9c61;
+  background: #f0ad81;
 }.box.TotalRecovered {
-  border: 1px solid #ce9b61;
-  background: #f0bc81;
+  border: 1px solid #ce9c61;
+  background: #f0ad81;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 800px) {
   .flex {
     flex-wrap: nowrap;
   }
 
   .box {
-    padding: 2em 1em;
-    max-width: 300px;
+    max-width: 260px;
     line-height: 1.5;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
-
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
